[package]
name = "oside"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oside-derive = { path = "oside-derive" }
mopa = "*"
mac_address = "*"
itertools = "*"
rand = "^0.8.5"
linkme = "0.3"
lazy_static = "*"
generic-array = { version = "^1.1.*", features = ["serde"] }
typenum = "*"
doc-comment = "*"
serde = { version = "1.0", features = ["derive"] }
typetag = "*"

md-5 = "*"
sha1 = "*"
hmac = "*"
aes = "*"
des = "*"
cbc = "*"
cipher = "*"
cfb-mode = "*"

[dev-dependencies]
criterion = "0.3"
pcap-parser = "0.14.*"
hex = "*"
serde_json = { version = "1.0" }


[[bench]]
name = "encode_benchmark"
harness = false

